# gmock-global-sample

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/sample/: main.cpp
